[package]
name = "zsstwebr"
version = "0.0.0"
authors = ["Erik Zscheile <erik.zscheile@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
aho-corasick = "0.7"
atom_syndication = "0.11"
camino = "1.0"
clap = "3.1"
readfilez = "0.2"
serde_yaml = "0.8"
walkdir = "2.3"

[dependencies.chrono]
version = "0.4"
# sadly, we use Utc::now(), so we can't mitigate
# https://github.com/chronotope/chrono/issues/499
# but the program isn't multithreaded, so it
# shouldn't be a problem...
default-features = false
features = ["clock", "serde"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.url]
version = "2.2"
features = ["serde"]

[dependencies.yz-diary-date]
version = "0.1"
features = ["camino"]
