[package]
name = "zsstwebr"
version = "0.0.0"
authors = ["Alain Zscheile <fogti+devel@ytrizja.de>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
aho-corasick = "1.1"
atom_syndication = "0.12"
camino = "1.1"
clap = "~4.4.17"
readfilez = "0.3"
serde_yaml = "0.9"
walkdir = "2.5"

[dependencies.chrono]
version = "0.4"
# sadly, we use Utc::now(), so we can't mitigate
# https://github.com/chronotope/chrono/issues/499
# but the program isn't multithreaded, so it
# shouldn't be a problem...
default-features = false
features = ["clock", "serde"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.yz-diary-date]
version = "0.1"
features = ["camino"]
